--- a/lab4/presentationLayer/appsettings.json
+++ b/lab4/presentationLayer/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "tickets": "Server=.; Database=TicketsDb; Trusted_Connection=true; Encrypt=false;"
+    "tickets2": "Server=.; Database=TicketsDb-2; Trusted_Connection=true; Encrypt=false;"
   }
 }
